We will now populate a dropdown and go to the last turn when loading a game. Also fix a display issue on smaller screens.

--- a/static/chess.css
+++ b/static/chess.css
@@ -1,6 +1,6 @@
 #chessBoard {
    margin: 0 auto;
-   width:50%;
+   width:75%;
 }
 #chessBoard .square {
    width:50px;
